--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ li a:hover {
     color: white;
 }
 
-never_gonna_give_you_up{
+.never_gonna_give_you_up{
     display: flex;
     position: absolute;
     margin-left: 71vh;
